--- a/css/style.css
+++ b/css/style.css
@@ -26,12 +26,16 @@ body {
 
 h1, h2 {
   font-family: 'Gabriela', serif;
-  color: #fff;
+  
 }
 
 h1 {
   font-size: 3.5em;
   margin-bottom: 0;
+  color: #fff;
+}
+.subhead{
+  color: #fff;
 }
 
 h2 {
@@ -56,8 +60,8 @@ p {
 }
 
 a {
-  color: black;
-  text-decoration: none;
+  color:purple;
+  text-decoration:none;
 }
 
 a:hover {
